--- a/preface.tex
+++ b/preface.tex
@@ -3,6 +3,12 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 
+Global illumination is one of the most thoroughly investigated fields in computer graphics. Its applications are numerous, from offline rendering to real-time applications, for photorealistic and non-photorealistic rendering, and on static or dynamic geometry, each coming with their own set of requirements in terms of flexibility, performance, and quality. A multitude of wildy differing approaches have been invented to simulate global illumination for each of the different sets of requirements. One of these approaches are many-light methods. They place lots of so-called virtual point lights in illuminated areas of the scene. These virtual point lights are themselves used to light the scene, thereby simulating indirect lighting. The concept is highly scalable and is used in both offline and real-time applications.
+
+One of the most challenging application areas of global illumination are real-time applications with dynamic geometry. While moving geometry prevents most kinds of precomputation, having only a few milliseconds of computation time forces researchers and application developers to make compromises on the quality or constrain their system to a very specific use case. As a result, all available global illumination algorithms have severe drawbacks, for example not achieving real-time performance, not fully supporting dynamic geometry, supporting only certain kinds of scenes, producing low quality, or not being scalable to low-end devices and high quality levels.
+
+In this thesis, we explore the field of real-time global illumination systems by implementing and optimizing a many-lights algorithm. The focus lies on improving imperfect shadow maps, which are approximate shadow maps that can efficiently be rendered for hundreds or thousands of lights. Additionally, we apply clustered deferred shading, an optimization that performs light culling, to many-light methods, and present an efficient implementation of interleaved shading, another optimization technique. Although coming with its own set of drawbacks, the implementation runs in real-time on current commodity hardware and requires no precomputation. The results show that the achieved performance is more than sufficient to be used in real-time applications. However, the output quality is still lacking, primarily because of several flaws of imperfect shadow maps, and requires a more fundamental change of approach to visibility testing.
+
 \chapter*{Zusammenfassung}
 \addcontentsline{toc}{chapter}{Zusammenfassung}
 
