--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -8,13 +8,13 @@ In this chapter, the presented global illumination system is explained on a conc
 \section{Global Illumination Pipeline Overview}
 \label{sec:concept:overview}
 
+\vspace{-5pt}
+
 \begin{figure}[h]
     \includegraphics[width=\textwidth]{graphics/GI_pipeline_concept}
-    \caption{The global illumination pipeline presented in this thesis.}
+    \caption{The global illumination pipeline presented in this thesis. Light list lookups, interleaving and shadow lookups are some of the steps performed during final gathering.}
     \label{fig:GIPipelineConcept}
 \end{figure}
-
-\todo{ mention parts of final gathering somewhere in the text/caption}
 
 
 \Cref{fig:GIPipelineConcept} provides an overview of the global illumination pipeline presented in this thesis.
