--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -513,7 +513,8 @@ pages = {223--233}
   number={5},
   pages={6},
   year={2008},
-  publisher={Citeseer}
+  publisher={Citeseer},
+  url={http://graphics.pixar.com/library/PointBasedColorBleeding/paper.pdf}
 }
 
 @inproceedings{Harada:2014:microbuffer,
@@ -574,7 +575,7 @@ pages = {223--233}
 }
 
 @inbook{Crassin:2012:OctreeVCT,
-name = {Octree-Based Sparse Voxelization Using The GPU Hardware Rasterizer},
+title = {Octree-Based Sparse Voxelization Using The GPU Hardware Rasterizer},
 author = {Crassin, Cyril and Green, Simon},
 note = "URL: \url{http://www.seas.upenn.edu/~pcozzi/OpenGLInsights/OpenGLInsights-SparseVoxelization.pdf} (Chapter PDF),
 \url{http://blog.icare3d.org/2012/05/gtc-2012-talk-octree-based-sparse.html} (GTC 2012 Talk)",
@@ -588,7 +589,8 @@ keywords = {Voxel, voxelization, gpu}
 author = {Alexey Panteleev},
 title = {NVIDIA VXGI: Dynamic Global Illumination for Games},
 howpublished = {Presentation at GPU Technology Conference 2015},
-year = {2015}
+year = {2015},
+url = {http://on-demand.gputechconf.com/gtc/2015/presentation/S5670-Alexey-Panteleev.pdf}
 }
 
 % tomorrow children and spherical harmonics missing
@@ -655,10 +657,16 @@ year = {2016},
 
 % screen space
 
-@article{Mara:2014:DeepGBuffers,
-  title={Fast global illumination approximations on deep g-buffers},
-  author={Mara, Michael and McGuire, Morgan and Nowrouzezahrai, Derek and Luebke, David},
-  year={2014}
+@techreport{Mara:2014:DeepGBuffers,
+  author = {Michael Mara and Morgan McGuire and Derek Nowrouzezahrai and David Luebke},
+  title = {Fast Global Illumination Approximations on Deep G-Buffers},
+  month = {June},
+  day = {16},
+  year = {2014},
+  pages = {16},
+  institution = {NVIDIA Corporation},
+  number = {NVR-2014-001},
+  url = {http://graphics.cs.williams.edu/papers/DeepGBuffer14}
 }
 
 @inproceedings{Mara:2016:DeepGBuffers2,
@@ -704,11 +712,20 @@ year = {2016},
 }
 
 @inproceedings{Rehfeld:2014:ClusteredPreconvolvedRadianceCaching,
-  title={Clustered Pre-convolved Radiance Caching.},
-  author={Rehfeld, Hauke and Zirr, Tobias and Dachsbacher, Carsten},
-  booktitle={EGPGV},
-  pages={25--32},
-  year={2014}
+ author = {Rehfeld, Hauke and Zirr, Tobias and Dachsbacher, Carsten},
+ title = {Clustered Pre-convolved Radiance Caching},
+ booktitle = {Proceedings of the 14th Eurographics Symposium on Parallel Graphics and Visualization},
+ series = {PGV '14},
+ year = {2014},
+ isbn = {978-3-905674-59-0},
+ location = {Swansea, Wales, United Kingdom},
+ pages = {25--32},
+ numpages = {8},
+ url = {http://dx.doi.org/10.2312/pgv.20141081},
+ doi = {10.2312/pgv.20141081},
+ acmid = {2855574},
+ publisher = {Eurographics Association},
+ address = {Aire-la-Ville, Switzerland, Switzerland},
 }
 
 @article{Vardis:2014:RadianceCachingUsingChrominanceCompression,
@@ -730,7 +747,8 @@ year = {2016},
   journal={ACM SIGGRAPH Courses},
   volume={7},
   pages={2},
-  year={2009}
+  year={2009},
+  url={http://www.crytek.com/download/Light_Propagation_Volumes.pdf}
 }
 
 @inproceedings{Kaplanyan:2010:LPV2,
@@ -989,11 +1007,12 @@ abstract = { Abstract In this article we describe and investigate tiled shading.
 @misc{Harris:2007:ParallelReduction,
   title={Optimizing parallel reduction in CUDA},
   author={Harris, Mark},
-  journal={NVIDIA Developer Technology},
+  howpublished={NVIDIA Developer Technology},
   volume={2},
   number={4},
   year={2007},
-  publisher={NVIDIA Corp. California}
+  publisher={NVIDIA Corp. California},
+  url={http://developer.download.nvidia.com/compute/cuda/1.1-Beta/x86_website/projects/reduction/doc/reduction.pdf}
 }
 
 @article{Cigolle:2014:NormalPacking,
@@ -1086,7 +1105,6 @@ pages = {153--161},
 publisher = {UNION Agency -- Science Press},
 address = {Plzen, Czech Republic},
 keywords = {},
-pubstate = {published},
 tppubtype = {article}
 }
 
