--- a/chap-introduction.tex
+++ b/chap-introduction.tex
@@ -3,7 +3,7 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
-Correctly simulating the behaviour of light is one of the largest research fields in the realm of computer graphics. In fact, since the output of any image synthesis algorithm is essentially the amount of light reaching a virtual camera, one could say that almost all techniques developed for synthesizing images are actually means to simulate light, either more correctly or using less hardware resources.
+Correctly simulating the behavior of light is one of the largest research fields in the realm of computer graphics. In fact, since the output of any image synthesis algorithm is essentially the amount of light reaching a virtual camera, one could say that almost all techniques developed for synthesizing images are actually means to simulate light, either more correctly or using less hardware resources.
 
 The complexity of simulating light arises from the multitude of different paths that individual photons can take from a light source to the camera. Along the way, photons can be reflected and refracted an arbitrary number of times, or can even be absorbed and not reach the camera at all. As a way to reduce the computational complexity of simulating these processes in a physically correct manner, computer graphics researchers have separated the interaction of light and matter into several visually distinct phenomena, which are then simulated separately with wildly differing approaches.
 
@@ -25,10 +25,10 @@ In this thesis, we present an implementation of a rendering system using the man
 While lights and geometry are allowed to move, the system does not provide temporal stability in this case. Furthermore, it simulates only one light bounce, i.\,e. light is reflected only once before illuminating surfaces visible to the camera. However, the approach is not inherently limited in this regard and can be extended to multiple bounces in future work.
 \\
 \\
-The full source code of the implementation is available in the project's repository\footnote{\url{https://github.com/karyon/multiframesampling}} under the MIT licence.
+The full source code of the implementation is available in the project's repository\footnote{\url{https://github.com/karyon/multiframesampling}} under the MIT license.
 \\
 \\
-This thesis is structured as follows: The next chapter details the global illumination effect and related work on it, before focussing on many-light methods by explaining the general idea and showing different approaches that have been investigated in the past. \Cref{chap:concept} describes, on a conceptual level, the implemented system with its different components. The implementation with its data layout and performance considerations is detailed in \Cref{chap:implementation}, and \Cref{chap:results} presents performance measurements, quality assessments, and discussions on the chosen approaches. Concluding remarks are provided in \Cref{chap:conclusion}.
+This thesis is structured as follows: The next chapter details the global illumination effect and related work on it, before focusing on many-light methods by explaining the general idea and showing different approaches that have been investigated in the past. \Cref{chap:concept} describes, on a conceptual level, the implemented system with its different components. The implementation with its data layout and performance considerations is detailed in \Cref{chap:implementation}, and \Cref{chap:results} presents performance measurements, quality assessments, and discussions on the chosen approaches. Concluding remarks are provided in \Cref{chap:conclusion}.
 
 
 \cleardoublepage
