--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -179,8 +179,6 @@
 
 \todo[inline,color=yellow]{implement some moving object. show temporal coherency when it moves. or even moving spherical light. \Cref{sec:results:ism}}
 
-\todo[inline,color=yellow]{rename gi shader to final gathering. other renames?}
-
 \todo[inline,color=yellow]{investigate into interleaving via shared memory in 2x2 groups (that is, one work group reads 2x2 interleaved pixels instead of one)}
 
 \todo[inline,color=yellow]{implement ISM max quality. every point into every ISM. likely render everything once for each ISM. a checkbox: when checked, compute high-quality once and do not change. back to normal when unchecked. \Cref{sec:results:ism:quality}}
@@ -190,7 +188,7 @@
 
 \subsubsection{misc}
 
-\todo[inline]{cleanup repository. rebase and cut the first unrelated commits out? decide on repository name, and maybe github name.}
+\todo[inline]{repository readme}
 
 
 \todo[inline]{brighter version for print}
